--- a/main.css
+++ b/main.css
@@ -16,11 +16,18 @@ body {
   
 .flex-container {
     background: white;
+    height: 1800px;
     padding: 10px;
     border: 5px solid black;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    /* flex-flow: row wrap; */
+    /* align-items: stretch; */
+    align-items: baseline;
+    /* align-items: flex-start; */
+    /* align-items: flex-end; */
+    justify-content: center;
   }
 
 .item-1 {
@@ -29,6 +36,7 @@ body {
     padding: 10px;
     border: 5px solid black;
     margin: 10px;
+    text-align: center;
 }
 
 .item-2 {
@@ -39,6 +47,7 @@ body {
     margin: 10px;
     width: 250px;
     font-size: 1.8rem;
+    text-align: center;
 }
 
 .item-3 {
@@ -48,6 +57,7 @@ body {
     border: 5px solid black;
     margin: 10px;
     height: 250px;
+    text-align: center;
 }
 
 .item-4 {
@@ -58,6 +68,7 @@ body {
     margin: 10px;
     width: 300px;
     height: 300px;
+    text-align: center;
 }
 
 .item-5 {
@@ -67,6 +78,7 @@ body {
     border: 5px solid black;
     margin: 10px;
     width: 350px;
+    text-align: center;
 }
 
 .item-6 {
@@ -76,4 +88,6 @@ body {
     border: 5px solid black;
     margin: 10px;
     width: 350px;
+    text-align: center;
 }
+
