--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body {
     /* align-items: flex-start; */
     /* align-items: flex-end; */
     justify-content: center;
+    align-content: center;
   }
 
 .item-1 {
